--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-/* ------ setting up defaults for entire page ----- */
+/* ------ setting up defaults for entire page of TEA COZY ----- */
 body {
   margin: 0; /* make sure no  gap between top of browser viewport and top of header  */
   font-family: Helvetica, sans-serif;
@@ -7,15 +7,14 @@ body {
   background-color: grey;
   opacity: 0.9;
 }
-div {
-  display: block;
-}
+
 
 /* ---- header ---- */
 header {
   display: flex;
   align-items: center;
   position: fixed;
+  margin: auto;
   z-index: 1;
   width: 100%;
   height: 69px;
@@ -25,16 +24,17 @@ header {
 
 header .logo {
 }
-header img {
+.logo img {
   height: 50px;
   padding-left: 10px;
   padding-top: 10px;
+  border: 1px solid white;
 }
 
 header nav {
   padding-right: 10px;
-  display: block;
   font-size: 22px;
+  border: 1px solid white;
 
 }
 .tcnav {
@@ -42,7 +42,7 @@ header nav {
   background-color: grey;
   opacity: 0.9;
 }
-
+/* ---- main content area for TEA COZY --- */
 .content {
   padding-top: 69px;
 }
