--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,7 +4,7 @@ body {
   font-family: Helvetica, sans-serif;
   font-size: 22px;
   color: seashell;
-  background-color: grey;
+  background-color: black;
   opacity: 0.9;
 }
 
@@ -12,11 +12,11 @@ body {
 /* ---- header ---- */
 header {
   display: inline-flex;
-  align-content: center;
+  align-items: center;
   justify-content: space-between;
   position: fixed;
   margin: auto;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
   height: 69px;
   border-bottom: 1px solid seashell;
@@ -29,21 +29,97 @@ header .logo {
   height: 50px;
   padding-left: 10px;
   padding-top: 10px;
-  border: 1px solid white;
 }
 
 header nav {
+  display: flex;
+  justify-content: space-around;
+  width: 400px;
   padding-right: 10px;
   font-size: 22px;
-  border: 1px solid white;
-  color: red;
-  background-color: grey;
   opacity: 0.9;
 }
-.tcnav {
-
+a:link {
+    color: seashell;
 }
+a:visited {
+    color: seashell;
+}
+a:hover {
+    color: blue;
+}
+
 /* ---- main content area for TEA COZY --- */
 .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 69px;
 }
+
+/* ---- MISSION ---- */
+#mission {
+  background-image: url("../images/img-mission-background.jpg");
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height: 700px;
+  width: 1200px;
+}
+
+.image_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  text-align: center;
+}
+.mission-logo.image_content span {
+  margin: 7 auto; /* initially set top-bottom margin to 10 and seemed to make no difference if I made it smaller */
+  background-color: black;
+  z-index: 8;
+}
+
+/* ---- FEATURED TEAS ---- */
+#feaured_tea {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  color: white;
+  width: 1000px;
+}
+.teas-of-the-month.image_content {
+  text-align: center;
+  font-weight: bold;
+}
+.teas-of-the-month {
+  margin-bottom: 0;
+}
+
+.teas {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  width: 1000px;
+}
+
+.tea-or-cake {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font-weight: bold;
+}
+.tea-or-cake img {
+  width: 300px;
+  height: 200px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.tea-or-cake p {
+  margin-top: 0;
+}
+
+/* ---- LOCATIONS ---- */
